--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
           <li><strong>08:30 スタバ 東別院店 </strong> ホットドリンクをGET☕</li>
           <li><strong>09:00 名古屋→東京</strong> クルマの中でカラオケ大会🎤</li>
           <li><strong>12:00 ランチ🍴</strong></li>
-          <li><strong>13:00 （ブラン検討中）</strong>どこいこっかな</li>
-          <li><strong>18:00 ディナー🍽️</strong>お楽しみ...</li>
-          <li><strong>19:30 イルミネーション🎄</strong>お楽しみ...</li>
+          <li><strong>13:00 （ブラン検討中）</strong></li>
+          <li><strong>18:00 ディナー🍽️</strong></li>
+          <li><strong>19:30 イルミネーション🎄</strong></li>
           <li><strong>21:00 変なホテル 西葛西 </strong> ホテル到着</li>
           <li><strong>23:00 就寝🛏</strong></li>
         </ul>
