--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
           <li><strong>08:30 スタバ 東別院店 </strong> ホットドリンクをGET☕</li>
           <li><strong>09:00 名古屋→東京</strong> クルマの中でカラオケ大会🎤</li>
           <li><strong>12:00 ランチ🍴</strong></li>
-          <li><strong>13:00 （プラン検討中）</strong></li>
-          <li><strong>18:00 ディナー🍽️</strong></li>
-          <li><strong>19:30 イルミネーション🎄</strong></li>
-          <li><strong>21:00 変なホテル 西葛西 </strong> ホテル到着</li>
+          <li><strong>15:30 変なホテル西葛西</strong>ホテル到着</li>
+          <li><strong>16:30 六本木 クリスマスマーケット🎄</strong></li>
+          <li><strong>19:30 ディナー🍽️</strong></li>
+          <li><strong>19:30 イルミネーション</strong></li>
           <li><strong>23:00 就寝🛏</strong></li>
         </ul>
       </section>
@@ -102,16 +102,23 @@
             <strong>06:30 ホテル→東京ディズニーシー🏰</strong> ホテルを出発!!
           </li>
           <li><strong>07:30 ゲート 到着</strong>寒いけど並ぶよ カイロ必須🔥</li>
-          <li><strong>09:00 入場!!🐭</strong> いざ夢の国へ</li>
-          <li><strong>12:00 ランチ🍴</strong> ディズニーシー内のお店を予約</li>
+          <li><strong>09:00 入場!!🐭</strong>いざ夢の国へ</li>
+          <li><strong>12:00 ランチ</strong> アトラクションに並びながら…</li>
           <li>
-            <strong>20:00 お土産購入🎁</strong>クルマだからって買いすぎ注意!!
+            <strong>17:00 ディナー🍴</strong>
+            ダッフィー＆フレンズの<br />ワンダフル・フレンドシップ🐻
           </li>
           <li>
-            <strong>21:00 退場🌟</strong>楽しい思い出がたくさんありますように...
+            <strong>20:00 お土産購入🎁</strong>
+            クルマだからって買いすぎ注意!!
           </li>
           <li>
-            <strong>21:30 東京→名古屋</strong> 真夜中ドライブ 安全運転で帰るよ!
+            <strong>21:00 退場🌟</strong>
+            楽しい思い出がたくさんありますように...
+          </li>
+          <li>
+            <strong>21:30 東京→名古屋</strong>
+            真夜中ドライブ 安全運転で帰るよ!
           </li>
           <li>
             <strong>02:00 名古屋 到着</strong>
