--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
         <p class="date">2025.12.13 - 2025.12.10</p>
         <p class="destination">Tokyo Disney Resort</p>
         <div class="space"></div>
-        <p>===お詫び===</p>
-        <p>※まだまだ工事中です。随時、内容を更新します</p>
       </section>
 
       <section class="page member-section">
@@ -84,11 +82,11 @@
           <li><strong>08:00 名古屋 出発</strong> 朝早いけど頑張ろうね!</li>
           <li><strong>08:30 スタバ 東別院店 </strong> ホットドリンクをGET☕</li>
           <li><strong>09:00 名古屋→東京</strong> クルマの中でカラオケ大会🎤</li>
-          <li><strong>12:00 ランチ🍴</strong></li>
-          <li><strong>15:30 変なホテル西葛西</strong>ホテル到着</li>
-          <li><strong>16:30 六本木 クリスマスマーケット🎄</strong></li>
-          <li><strong>19:30 ディナー🍽️</strong></li>
-          <li><strong>19:30 イルミネーション</strong></li>
+          <li><strong>12:00 ランチ🍴</strong> 好きなものを食べます</li>
+          <li><strong>15:00 六本木 クリスマスマーケット🎄</strong></li>
+          <li><strong>18:30 ディナー🍽️</strong> 好きなものを食べます</li>
+          <li><strong>20:30 お台場海浜公園</strong></li>
+          <li><strong>21:30 変なホテル西葛西</strong>ホテル到着</li>
           <li><strong>23:00 就寝🛏</strong></li>
         </ul>
       </section>
@@ -99,9 +97,9 @@
 
         <ul class="timeline">
           <li>
-            <strong>06:30 ホテル→東京ディズニーシー🏰</strong> ホテルを出発!!
+            <strong>05:10 ホテル→東京ディズニーシー🏰</strong> ホテルを出発!!
           </li>
-          <li><strong>07:30 ゲート 到着</strong>寒いけど並ぶよ カイロ必須🔥</li>
+          <li><strong>06:10 ゲート 到着</strong>寒いけど並ぶよ カイロ必須🔥</li>
           <li><strong>09:00 入場!!🐭</strong>いざ夢の国へ</li>
           <li><strong>12:00 ランチ</strong> アトラクションに並びながら…</li>
           <li>
@@ -109,20 +107,20 @@
             ダッフィー＆フレンズの<br />ワンダフル・フレンドシップ🐻
           </li>
           <li>
-            <strong>20:00 お土産購入🎁</strong>
-            クルマだからって買いすぎ注意!!
-          </li>
-          <li>
             <strong>21:00 退場🌟</strong>
             楽しい思い出がたくさんありますように...
           </li>
           <li>
-            <strong>21:30 東京→名古屋</strong>
+            <strong>22:00 湯処葛西</strong>
+            お風呂に入ってリフレッシュ!!
+          </li>
+          <li>
+            <strong>23:00 東京→名古屋</strong>
             真夜中ドライブ 安全運転で帰るよ!
           </li>
           <li>
-            <strong>02:00 名古屋 到着</strong>
-            楽しい旅をありがとう!おつかれさま!!
+            <strong>03:00 名古屋 到着</strong>
+            次の日は一日寝るわよ!!
           </li>
         </ul>
       </section>
